@startuml
hide circle
skinparam class {
  BackgroundColor White
  BorderColor Black
}

class autor {
  id : INTEGER <<PK>>
  nome : TEXT <<NN>>
  nacionalidade : TEXT
}

class autor_acao {
  id : INTEGER <<PK>>
  acao : TEXT <<NN>>
}

class categoria {
  id : INTEGER <<PK>>
  nome : TEXT <<NN>>
  descricao : TEXT
}

class coletanea {
  id : INTEGER <<PK>>
  nome : TEXT <<NN>>
  apelido : TEXT <<NN>>
  descricao : TEXT
  arquivo : TEXT
}

class hino {
  id : INTEGER <<PK>>
  nome : TEXT <<NN>>
  nome_pt : TEXT
  idioma : TEXT
  texto : TEXT
  texto_processado : TEXT
  tom : TEXT
  texto_cifra : TEXT
  cifra : TEXT
  categoria_id : INTEGER
  ano_composicao : INTEGER
  date_insert : DATETIME <<NN>>
  date_update : DATETIME <<NN>>
}

class hino_autor {
  id : INTEGER <<PK>>
  hino_id : INTEGER <<NN>>
  autor_id : INTEGER <<NN>>
  autor_acao_id : INTEGER <<NN>>
}

class hino_coletanea {
  id : INTEGER <<PK>>
  hino_id : INTEGER <<NN>>
  hino_numero : TEXT
  coletanea_id : INTEGER <<NN>>
}

hino }o--|| categoria : categoria_id
hino_autor }o--|| autor_acao : autor_acao_id
hino_autor }o--|| hino : hino_id
hino_autor }o--|| autor : autor_id
hino_coletanea }o--|| coletanea : coletanea_id
hino_coletanea }o--|| hino : hino_id

@enduml